--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
   <div class="wrapper">
 
     <section>
-      <div id="title">
+      <!--<div id="title">
         <h1>quixot.es</h1>
       </div>
+      -->
 
-      <img src="https://f.cloud.github.com/assets/38/2316553/279b6b1c-a337-11e3-9006-b16bdec2d2a6.jpg" alt="Crazy" />
+      <img src="https://f.cloud.github.com/assets/38/2316553/279b6b1c-a337-11e3-9006-b16bdec2d2a6.jpg" alt="Quixotes!" />
     </section>
 
   </div>
