--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       -->
 
-      <img src="https://f.cloud.github.com/assets/38/2316553/279b6b1c-a337-11e3-9006-b16bdec2d2a6.jpg" alt="Quixotes!" />
+      <img src="https://f.cloud.github.com/assets/38/2318912/d3fd1eca-a371-11e3-8509-b12b80c928a2.png" alt="Quixotes!" />
     </section>
 
   </div>
