image without a big copyright across it

--- a/index.html
+++ b/index.html
@@ -5,30 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>quixot.es</title>
     <link rel="stylesheet" href="stylesheets/main.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   </head>
   <body>
-  <!--
-  <div id="header">
-    <nav>
-      <li class="fork"><a href="https://github.com/quixotes">View On GitHub</a></li>
-    </nav>
-  </div>
-  -->
-
-  <div class="wrapper">
-
-    <section>
-      <!--<div id="title">
-        <h1>quixot.es</h1>
-      </div>
-      -->
-
+    <div id="bg">
       <img src="https://f.cloud.github.com/assets/38/2318912/d3fd1eca-a371-11e3-8509-b12b80c928a2.png" alt="Quixotes!" />
-    </section>
-
-  </div>
-    
+    </div>
   </body>
 </html>
